<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.myfirstapplication.MainActivity"
    android:background="#006699">

    <Button
        android:id="@+id/horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/linear_horizontal_button"
        app:layout_constraintBottom_toTopOf="@+id/vertical"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/linear_vertical_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toTopOf="@id/grid"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp" />

    <Button
        android:id="@+id/grid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/grid_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vertical"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toBottomOf="@id/relative"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp" />

    <Button
        android:id="@+id/relative"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/relative_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grid"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp" />

</android.support.constraint.ConstraintLayout>
